# Gym-Jam

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  nginx.conf  pyproject.toml
.atl/: skill-registry.md
backend/: .coverage  alembic.ini  entrypoint.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/src/: main.py
backend/src/application/: commands.py  dtos.py  errors.py  validators.py
backend/src/application/use_cases/: __init__.py  add_exercise_to_workout.py  add_training_day.py  create_workout.py  get_workout_with_days.py  get_workouts_by_user.py  remove_exercise_from_workout.py  remove_training_day.py  reorder_exercises.py
backend/src/domain/aggregates/: __init__.py  workout.py
backend/src/domain/entities/: __init__.py  training_day.py  workout_exercise.py
backend/src/domain/errors/: __init__.py  base.py  training_day_errors.py  workout_exercise_errors.py
backend/src/infrastructure/: config.py  database.py
backend/src/presentation/: dependencies.py  error_handlers.py
backend/tests/http/: conftest.py  test_auth.py  test_workouts.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx  WorkoutCard.tsx
frontend/src/hooks/: useAuth.ts  useWorkouts.ts
frontend/src/lib/: api.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  NewWorkoutPage.tsx  RegisterPage.tsx  WorkoutDetailPage.tsx
frontend/src/store/: authStore.ts
frontend/src/types/: api.ts
(+53 files in other folders)
