[tool.poetry]
name = "gym-jam-backend"
version = "0.1.0"
description = "Gym-Jam backend domain layer"
authors = []

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
returns = ">=0.22"

[tool.poetry.group.dev.dependencies]
pytest = ">=8"
pytest-cov = ">=5"
ruff = ">=0.4"
mypy = ">=1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "--cov=backend/src --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.12"
strict = true
